# wire-server

./: .gitignore  cabal.project  package-defaults.yaml
docs/developer/: coding-style.md
docs/src/developer/developer/: editor-setup.md
docs/src/developer/developer/large-groups/: data.yaml
libs/api-bot/: api-bot.cabal
libs/api-client/: api-client.cabal
libs/bilge/: bilge.cabal
libs/brig-types/: brig-types.cabal
libs/cargohold-types/: cargohold-types.cabal
libs/cassandra-util/: cassandra-util.cabal
libs/deriving-swagger2/: deriving-swagger2.cabal
libs/dns-util/: dns-util.cabal
libs/extended/: extended.cabal
libs/galley-types/: galley-types.cabal
libs/gundeck-types/: gundeck-types.cabal
libs/imports/: imports.cabal
libs/jwt-tools/: jwt-tools.cabal
libs/metrics-core/: metrics-core.cabal
libs/metrics-wai/: metrics-wai.cabal
libs/polysemy-wire-zoo/: polysemy-wire-zoo.cabal
libs/polysemy-wire-zoo/src/Wire/Sem/Now/: Spec.hs
libs/ropes/: ropes.cabal
libs/schema-profunctor/: schema-profunctor.cabal
libs/sodium-crypto-sign/: sodium-crypto-sign.cabal
libs/ssl-util/: ssl-util.cabal
libs/tasty-cannon/: tasty-cannon.cabal
libs/types-common/: types-common.cabal
libs/types-common-aws/: types-common-aws.cabal
libs/types-common-journal/: types-common-journal.cabal
libs/wai-utilities/: wai-utilities.cabal
libs/wire-api/: wire-api.cabal
libs/wire-api-federation/: wire-api-federation.cabal
libs/wire-api/src/Wire/API/MLS/: Capabilities.hs  Credential.hs  HPKEPublicKey.hs  KeyPackage.hs  LeafNode.hs  Message.hs  ProtocolVersion.hs  SignaturePublicKey.hs
libs/wire-api/src/Wire/API/Routes/Public/Galley/: Conversation.hs
libs/wire-api/src/Wire/API/User/: Client.hs
libs/wire-api/test/: golden.hs
libs/wire-api/test/unit/Test/Wire/API/: MLS.hs  Run.hs
libs/wire-message-proto-lens/: wire-message-proto-lens.cabal
libs/zauth/: zauth.cabal
nix/: local-haskell-packages.nix  manual-overrides.nix  wire-server.nix
services/brig/: brig.cabal
services/brig/schema/: main.hs
services/brig/schema/src/: Run.hs
services/brig/src/Brig/: App.hs
services/brig/src/Brig/API/MLS/KeyPackages/: Validation.hs
services/brig/src/Brig/Effects/UserPendingActivationStore/: Cassandra.hs
services/brig/test/integration/: Run.hs
services/brig/test/integration/API/: Search.hs
services/brig/test/integration/API/User/: Client.hs
services/brig/test/integration/Federation/: End2end.hs
services/cannon/: cannon.cabal
services/cargohold/: cargohold.cabal
services/cargohold/src/CargoHold/: Federation.hs
services/federator/: federator.cabal
services/galley/: galley.cabal
services/galley/schema/src/: Run.hs  V81_MLSDraft17.hs
services/galley/src/Galley/API/: Action.hs  Create.hs  Federation.hs
services/galley/src/Galley/API/MLS/: Message.hs  Util.hs
services/galley/src/Galley/Cassandra/: Queries.hs
services/galley/test/: integration.hs
services/galley/test/integration/API/: MLS.hs  Util.hs
services/galley/test/integration/API/MLS/: Util.hs
services/gundeck/: gundeck.cabal
services/proxy/: proxy.cabal
services/spar/: spar.cabal
tools/api-simulations/: api-simulations.cabal
tools/db/assets/: assets.cabal
tools/db/auto-whitelist/: auto-whitelist.cabal
tools/db/billing-team-member-backfill/: billing-team-member-backfill.cabal
tools/db/find-undead/: find-undead.cabal
tools/db/inconsistencies/: inconsistencies.cabal
tools/db/migrate-sso-feature-flag/: migrate-sso-feature-flag.cabal
tools/db/move-team/: move-team.cabal
tools/db/repair-handles/: repair-handles.cabal
tools/db/service-backfill/: service-backfill.cabal
tools/fedcalls/: fedcalls.cabal
tools/rex/: rex.cabal
tools/stern/: stern.cabal
