cabal-version:      2.0
name:               types-common-journal
version:            0.1.0
synopsis:           Shared protobuf type definitions.
description:        Shared protobuf type definitions for journaling.
category:           System
author:             Wire Swiss GmbH
maintainer:         Wire Swiss GmbH <backend@wire.com>
copyright:          (c) 2017 Wire Swiss GmbH
license:            AGPL-3
license-file:       LICENSE
build-type:         Custom
extra-source-files:
  proto/TeamEvents.proto
  proto/UserEvents.proto

custom-setup
  setup-depends:
      base
    , Cabal
    , proto-lens-setup

library
  exposed-modules:
    Data.Proto
    Data.Proto.Id
    Proto.TeamEvents
    Proto.TeamEvents_Fields
    Proto.UserEvents
    Proto.UserEvents_Fields

  other-modules:      Paths_types_common_journal
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  ghc-prof-options:   -fprof-auto-exported
  build-tool-depends: proto-lens-protoc:proto-lens-protoc
  build-depends:
      base                >=4 && <5
    , bytestring
    , imports
    , proto-lens-runtime
    , time
    , types-common
    , uuid

  default-language:   GHC2021
  autogen-modules:
    Proto.TeamEvents
    Proto.TeamEvents_Fields
    Proto.UserEvents
    Proto.UserEvents_Fields
