cabal-version: 1.12
name:          fedcalls
version:       1.0.0
synopsis:
  Generate a dot file from swagger docs representing calls to federated instances.

category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2020 Wire Swiss GmbH
license:       AGPL-3
build-type:    Simple

executable fedcalls
  main-is:            Main.hs
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -funbox-strict-fields -threaded -with-rtsopts=-N -with-rtsopts=-T
    -rtsopts -Wredundant-constraints

  build-depends:
      aeson
    , base
    , containers
    , imports
    , insert-ordered-containers
    , language-dot
    , swagger2
    , text
    , wire-api

  default-language:   GHC2021
