cabal-version: 1.12
name:          billing-team-member-backfill
version:       1.0.0
synopsis:      Backfill billing_team_member table
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2020 Wire Swiss GmbH
license:       AGPL-3
build-type:    Simple

executable billing-team-member-backfill
  main-is:            Main.hs
  other-modules:
    Options
    Paths_billing_team_member_backfill
    Work

  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -funbox-strict-fields -threaded -with-rtsopts=-N -with-rtsopts=-T
    -rtsopts -Wredundant-constraints

  build-depends:
      base
    , cassandra-util
    , conduit
    , containers
    , imports
    , lens
    , optparse-applicative
    , text
    , tinylog
    , types-common
    , wire-api

  default-language:   GHC2021
