cabal-version: 1.12
name:          migrate-sso-feature-flag
version:       1.0.0
synopsis:
  Backfill sso feature flag into teams that already have an IdP.

category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2018 Wire Swiss GmbH
license:       AGPL-3
build-type:    Simple

executable migrate-sso-feature-flag
  main-is:            Main.hs
  other-modules:
    Options
    Paths_migrate_sso_feature_flag
    Work

  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -funbox-strict-fields -threaded -with-rtsopts=-N -with-rtsopts=-T
    -rtsopts -Wredundant-constraints

  build-depends:
      base
    , brig-types
    , cassandra-util
    , conduit
    , galley
    , imports
    , lens
    , optparse-applicative
    , tinylog
    , types-common
    , unliftio
    , wire-api

  default-language:   GHC2021
