cabal-version: 1.12
name:          repair-handles
version:       1.0.0
synopsis:      Repair inconsistencies between tables user and user_handle
category:      Network
author:        Wire Swiss GmbH
maintainer:    Wire Swiss GmbH <backend@wire.com>
copyright:     (c) 2018 Wire Swiss GmbH
license:       AGPL-3
build-type:    Simple

executable repair-handles
  main-is:            Main.hs
  other-modules:
    Options
    Paths_repair_handles
    Types
    Work

  hs-source-dirs:     repair-handles src
  default-extensions:
    NoImplicitPrelude
    AllowAmbiguousTypes
    DataKinds
    DefaultSignatures
    DerivingStrategies
    DerivingVia
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PackageImports
    PatternSynonyms
    QuasiQuotes
    TypeFamilies
    TypeFamilyDependencies
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -fwarn-tabs -optP-Wno-nonportable-include-path
    -Wredundant-constraints

  build-depends:
      base
    , brig
    , cassandra-util
    , conduit
    , containers
    , imports
    , lens
    , mtl
    , optparse-applicative
    , string-conversions
    , text
    , tinylog
    , types-common
    , uuid

  default-language:   GHC2021
